CPM-1215 - Fix spacing

--- a/src/styles/_includes/components/_tray.scss
+++ b/src/styles/_includes/components/_tray.scss
@@ -238,7 +238,11 @@
         color: #00b5e2;
         font-weight: bold;
         letter-spacing: normal;
-        margin-bottom: 0;
+        margin-top: 0;
+
+        + p {
+          margin-top: 0;
+        }
       }
 
       > ul {
@@ -307,10 +311,6 @@
         margin-top: 15px;
         line-height: 1.2;
       }
-
-      p:last-child {
-        margin-bottom: 1.33em;
-      }
     }
 
     &--isi {
@@ -321,6 +321,10 @@
     &--hidden {
       display: none;
       padding: 0 20px;
+
+      p {
+        margin-top: 0;
+      }
     }
   }
 
